# AItchy

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  init_data.sql  pyproject.toml  start.sh
backend/app/: config.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 03559aa24a7f_chaged_age_to_birth_date_in_user_model.py  4a05d72e93a6_initial_migration.py  580481575520_initial_migration_models.py  791ca79642bf_async_db_now_changed_column_name.py  97e83224be3c_first_db_init.py  cfa0133e118b_fixed_emotiob_problem.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: analytics.py  authentication.py  context_factor.py  effect.py  emotion.py  main.py  mood_content.py  mood_context.py  mood_emotion.py  mood_entry.py  notes.py  (+1 more)
backend/app/db/: database.py
backend/app/models/: __init__.py  context_factor.py  database.py  effect.py  emotion.py  mood_content.py  mood_context.py  mood_emotion.py  mood_entry.py  notes.py  user.py
backend/app/repository/: __init__.py  context_factor.py  effect.py  emotion.py  mood_content.py  mood_context.py  mood_emotion.py  mood_entry.py  notes.py  user.py
backend/app/schemas/: __init__.py  context_factor.py  effect.py  emotion.py  mood_content.py  mood_context.py  mood_emotion.py  mood_entry.py  notes.py  openai_api.py  pagination.py  token.py  user.py
backend/app/services/: analytics.py  authentication.py  context_factor.py  effect.py  emotion.py  mood_content.py  mood_context.py  mood_emotion.py  mood_entry.py  notes.py  openai_api.py  security.py  user.py
(+43 files in other folders)
